Fixed height for skills timeline that stretched on team page when the timeline was not closed

--- a/app/js/modules/about/css/about-me.css
+++ b/app/js/modules/about/css/about-me.css
@@ -70,7 +70,7 @@
 
 .skills-timeline{
     width: 100%;
-    height: 810px;
+    height: 779px;
     display: none;
     position: absolute;
     top: 0;
